force-app/main/default/objects/Questionnaire_Rempli__c/Questionnaire_Rempli__c.object-meta.xml
<CustomObject>
    <description>Stockage des résultats des questionnaires de DA.</description>
    <label>Questionnaire rempli</label>
    <nameField>
        <displayFormat>QUE-{0000}</displayFormat>
        <label>Numéro de Questionnaire rempli</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires remplis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>