force-app/main/default/objects/Questionnaire_Rempli__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Questionnaires remplis</relationshipLabel>
    <relationshipName>Questionnaires_remplis</relationshipName>
    <type>Lookup</type>
</CustomField>