force-app/main/default/objects/Questionnaire_Rempli__c/fields/Motif_de_sortie_du_DA__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_sortie_du_DA__c</fullName>
    <label>Motif de sortie du DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changement de statut juridique</fullName>
            </value>
            <value>
                <fullName>Personne déjà formée à l’activité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>