force-app/main/default/objects/Questionnaire_Rempli__c/fields/Nom_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le contact doit être parmi les contacts du compte</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Compte__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Questionnaires remplis</relationshipLabel>
    <relationshipName>Questionnaires_remplis</relationshipName>
    <type>Lookup</type>
</CustomField>