force-app/main/default/objects/Questionnaire_Rempli__c/fields/Nombre_Revu__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Revu__c</fullName>
    <label>Nombre réponse &quot;Revu&quot;</label>
    <summaryFilterItems>
        <field>Reponse__c.Revu__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Reponse__c.Questionnaire_rempli__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>