force-app/main/default/objects/Questionnaire_Rempli__c/fields/Planifier_un_rappel__c.field-meta.xml
<CustomField>
    <fullName>Planifier_un_rappel__c</fullName>
    <label>Planifier un rappel</label>
    <type>Date</type>
</CustomField>