force-app/main/default/objects/Questionnaire_Rempli__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questionnaires remplis</relationshipLabel>
    <relationshipName>Questionnaires_remplis</relationshipName>
    <type>Lookup</type>
</CustomField>