force-app/main/default/objects/Questionnaire_Rempli__c/fields/Reference_de_l_ancien_PUDO__c.field-meta.xml
<CustomField>
    <fullName>Reference_de_l_ancien_PUDO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référence de l&#39;ancien PUDO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Questionnaires remplis</relationshipLabel>
    <relationshipName>Questionnaires_remplisAncien</relationshipName>
    <type>Lookup</type>
</CustomField>