force-app/main/default/objects/Questionnaire_Rempli__c/fields/Requete__c.field-meta.xml
<CustomField>
    <fullName>Requete__c</fullName>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Historique des questionnaires</relationshipLabel>
    <relationshipName>Reponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>