force-app/main/default/objects/Questionnaire_Rempli__c/fields/Score_obtenu__c.field-meta.xml
<CustomField>
    <fullName>Score_obtenu__c</fullName>
    <inlineHelpText>Valable uniquement pour le Bilan</inlineHelpText>
    <label>Score obtenu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCES</fullName>
            </value>
            <value>
                <fullName>EXCLUSION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>