force-app/main/default/objects/Questionnaire_Rempli__c/fields/Statut_de_demande_de_sortie_de_DA__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_demande_de_sortie_de_DA__c</fullName>
    <label>Statut de demande de sortie de DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>