force-app/main/default/objects/Questionnaire_Rempli__c/fields/Tech_Bilan_Treated__c.field-meta.xml
<CustomField>
    <fullName>Tech_Bilan_Treated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Bilan Treated</label>
    <type>Checkbox</type>
</CustomField>