force-app/main/default/objects/Questionnaire_Rempli__c/fields/Tech_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Tech_Questionnaire__c</fullName>
    <description>Ce champ permet d&#39;afficher le nom du questionnaire sans le lien vers le questionnaire lui même dans la liste associée questionnaire rempli sur les requêtes DA.</description>
    <formula>Questionnaire__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire</label>
    <type>Text</type>
</CustomField>