force-app/main/default/objects/Questionnaire_Rempli__c/fields/Traitement_interrompu__c.field-meta.xml
<CustomField>
    <fullName>Traitement_interrompu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traitement interrompu</label>
    <type>Checkbox</type>
</CustomField>