force-app/main/default/objects/Questionnaire_Rempli__c/recordTypes/FR_Demande_de_sortie.recordType-meta.xml
<RecordType>
    <fullName>FR_Demande_de_sortie</fullName>
    <active>true</active>
    <label>FR_Demande_de_sortie</label>
</RecordType>