force-app/main/default/objects/Questionnaire_Rempli__c/recordTypes/FR_Qustionnaire_rempli.recordType-meta.xml
<RecordType>
    <fullName>FR_Qustionnaire_rempli</fullName>
    <active>true</active>
    <label>FR_Qustionnaire_rempli</label>
</RecordType>